styled the search form and buttons

--- a/WD101/HTMLCSS/index.html
+++ b/WD101/HTMLCSS/index.html
@@ -8,13 +8,15 @@
 		<div class="navbar">
 		</div>
 		<div class="image">
-			<img src="http://fineprintnyc.com/images/blog/history-of-logos/google/google-logo.png"/>
+			<img src="http://fineprintnyc.com/images/blog/history-of-logos/google/google-logo.png" height="155" width="269"/>
 		</div>
 		<div class="search">
 			<form method="get">
-				<p><input type="text"></p>
-				<p class="submit"><input type="submit">Google Search</p>
-				<p class="submit"><input type="submit">I'm Feeling Lucky</p>
+				<p><input type="text" class="input_search"></p>
+				<p>
+					<input type="submit" value="Google Search" class="submit">
+					<input type="submit" value="I'm Feeling Lucky" class="submit">
+				</p>
 			</form>
 		</div>
 
