added the header and footer information

--- a/WD101/HTMLCSS/index.html
+++ b/WD101/HTMLCSS/index.html
@@ -6,6 +6,12 @@
 	</head>
 	<body>
 		<div class="navbar">
+			<ul>
+				<li><a href="#You">+You</a></li>
+				<li><a href="#Gmail">Gmail</a></li>
+				<li><a href="#Images">Images</a></li>
+				<li><a href="#SignIn">Sign In</a></li>
+			</ul>
 		</div>
 		<div class="image">
 			<img src="http://fineprintnyc.com/images/blog/history-of-logos/google/google-logo.png" height="155" width="269"/>
@@ -19,6 +25,20 @@
 				</p>
 			</form>
 		</div>
-
+		<div class="footer">
+			<ul> 
+				<span class="leftside">
+					<li><a href="#Advertising">Advertising</a></li>
+					<li><a href="#Business">Business</a></li>
+					<li><a href="#About">About</a></li>
+				</span>
+				<span class="rightside">
+					<li><a href="#Privacy">Privacy</a></li>
+					<li><a href="#Terms">Terms</a></li>
+					<li><a href="#Settings">Settings</a></li>
+					<li><a href="#UseGoogle">Use Google.com</a></li>
+				</span>
+			</ul>
+		</div>
 	</body>
 </html>
