--- a/WD101/JS-EtchASketch/index.html
+++ b/WD101/JS-EtchASketch/index.html
@@ -9,7 +9,9 @@
 		<script src="script.js"></script>
 	</head>
 	<body>
-		
-
+		<h1>The Odin Project: Etch-A-Sketch Project</h1>
+		<div id="container">
+			
+		</div>
 	</body>
 </html>
