added button to clear grid of colour

--- a/WD101/JS-EtchASketch/index.html
+++ b/WD101/JS-EtchASketch/index.html
@@ -10,6 +10,8 @@
 	</head>
 	<body>
 		<h1>The Odin Project: Etch-A-Sketch Project</h1>
+		<button class="cleargrid">Clear Grid</button>
+		<p></p>
 		<div id="container">
 			
 		</div>
