--- a/WD101/JS-EtchASketch/index.html
+++ b/WD101/JS-EtchASketch/index.html
@@ -11,6 +11,7 @@
 	<body>
 		<h1>The Odin Project: Etch-A-Sketch Project</h1>
 		<button class="cleargrid">Clear Grid</button>
+		<button class="newgrid">Create New Grid</button>
 		<p></p>
 		<div id="container">
 			
